fix: remove unnecessary usage of StringUtils